--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ cmake_minimum_required(VERSION 2.6)
 SET (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.orogen/config")
 INCLUDE(orc_moduleBase)
 
-# FIND_PACKAGE(KDL)
-# FIND_PACKAGE(OCL)
-
+add_definitions(-Wall)
+add_definitions(-DBASE_LOG_NAMESPACE=${PROJECT_NAME})
+add_definitions(-DBASE_LOG_DEBUG)
